# munich-apartment-agent

./: .env.example  .gitattributes  .gitignore  README.md  WIKI_SCHEMA.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
deploy/hf-space/: Dockerfile  README.md
deploy/systemd/: apartment-agent.service  apartment-agent.timer  apartment-dashboard.service  install-dashboard.sh  install.sh
docs/: AGENTIC_REVIEW.md
src/apartment_agent/: __init__.py  checkpoint.py  config.py  feedback.py  graph.py  main.py  models.py  retry.py
src/apartment_agent/db/: __init__.py  schema.sql  supabase_client.py
src/apartment_agent/evals/: __init__.py  cases.py  harness.py
src/apartment_agent/llm/: __init__.py  router.py
src/apartment_agent/nodes/: filter.py
src/apartment_agent/notify/: telegram.py
src/apartment_agent/sources/: __init__.py  base.py  wg_gesucht.py
src/apartment_agent/web/: __init__.py  __main__.py  app.py  runner.py  store.py
src/apartment_agent/web/static/: app.js  config.js  index.html  style.css
src/apartment_agent/wiki/: __init__.py  ingest.py  lint.py  pages.py  store.py
tests/: test_checkpoint.py  test_evals.py  test_feedback.py  test_filter.py  test_graph.py  test_observability.py  test_parse.py  test_resilience.py  test_router.py  test_web.py  test_wiki.py
tests/fixtures/: wg_sample.html
